--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mizim\AppData\Local\Temp\testng-eclipse-1053462960\testng-customsuite.xml</span>
+                    <span>C:\Users\mizim\AppData\Local\Temp\testng-eclipse--853678847\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="allPageTestIng.Home_Page_Testing" class="method navigator-link" hash-for-method="clickLogoTest">clickLogoTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="allPageTestIng.Home_Page_Testing" class="method navigator-link" hash-for-method="clickAboutUsTest">clickAboutUsTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickLogoTest">
-                  </a> <!-- clickLogoTest -->
-                  <span class="method-name">clickLogoTest</span>
+                  <a name="clickAboutUsTest">
+                  </a> <!-- clickAboutUsTest -->
+                  <span class="method-name">clickAboutUsTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mizim\AppData\Local\Temp\testng-eclipse-1053462960\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mizim\AppData\Local\Temp\testng-eclipse--853678847\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;allPageTestIng.Home_Page_Testing&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;clickLogoTest&quot;/&gt;
+          &lt;include name=&quot;clickAboutUsTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- allPageTestIng.Home_Page_Testing --&gt;
     &lt;/classes&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickLogoTest')
+data.setCell(0, 1, 'clickAboutUsTest')
 data.setCell(0, 2, 'allPageTestIng.Home_Page_Testing')
-data.setCell(0, 3, 11293);
+data.setCell(0, 3, 10431);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,13 +214,23 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">allPageTestIng.Home_Page_Testing</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">clickUserIdTest</span>
+                <span class="ignored-method-name">clickEnrollTest</span>
+                <br/>
+                <span class="ignored-method-name">clickLogoTest</span>
+                <br/>
+                <span class="ignored-method-name">clickMentoresTest</span>
+                <br/>
+                <span class="ignored-method-name">clickUserEmailsTest</span>
+                <br/>
+                <span class="ignored-method-name">clickLoginTest</span>
+                <br/>
+                <span class="ignored-method-name">clickCoursesTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -238,12 +248,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clickLogoTest</span>
-                <span class="method-start">8721 ms</span>
+                <span class="method-name">clickAboutUsTest</span>
+                <span class="method-start">4453 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearUp</span>
-                <span class="method-start">20021 ms</span>
+                <span class="method-start">14894 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
