--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,8 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>allPageTestIng.Home_Page_Testing.clickUserIdTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickEnrollTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickLogoTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickMentoresTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickUserEmailsTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickLoginTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickCoursesTest</td></tr>
 </table>
