Frame Work Day03

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickUserEmailsTest</td>
+<td>clickUserEmailandPasswordTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
