--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -2,7 +2,7 @@
 <tr><td>allPageTestIng.Home_Page_Testing.clickEnrollTest</td></tr>
 <tr><td>allPageTestIng.Home_Page_Testing.clickLogoTest</td></tr>
 <tr><td>allPageTestIng.Home_Page_Testing.clickMentoresTest</td></tr>
-<tr><td>allPageTestIng.Home_Page_Testing.clickUserEmailsTest</td></tr>
+<tr><td>allPageTestIng.Home_Page_Testing.clickAboutUsTest</td></tr>
 <tr><td>allPageTestIng.Home_Page_Testing.clickLoginTest</td></tr>
 <tr><td>allPageTestIng.Home_Page_Testing.clickCoursesTest</td></tr>
 </table>
