--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8896b">  <td>24/11/11 22:06:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home_Page_Testing.clickAboutUsTest()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">clickAboutUsTest</td> 
+<tr bgcolor="e8896b">  <td>24/11/15 18:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home_Page_Testing.clickUserEmailandPasswordTest()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">clickUserEmailandPasswordTest</td> 
   <td>main@1328238652</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>24/11/11 22:06:15</td>   <td>-4450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Basic_Class.setup()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">&gt;&gt;setup</td> 
+<tr bgcolor="b4c3a9">  <td>24/11/15 18:30:26</td>   <td>-3073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Basic_Class.setup()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>24/11/11 22:06:30</td>   <td>10441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Basic_Class.tearUp()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">&lt;&lt;tearUp</td> 
+<tr bgcolor="b4c3a9">  <td>24/11/15 18:31:11</td>   <td>42021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Basic_Class.tearUp()[pri:0, instance:allPageTestIng.Home_Page_Testing@b62d79]">&lt;&lt;tearUp</td> 
 <td>&nbsp;</td>  <td>main@1328238652</td>   <td></td> </tr>
 </table>
