--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>allPageTestIng.HomePageTesting.clickLogoTest</td></tr>
 <tr><td>allPageTestIng.HomePageTesting.clickAboutUsTest</td></tr>
-<tr><td>allPageTestIng.HomePageTesting.clickUserEmailandPasswordTest</td></tr>
 <tr><td>allPageTestIng.HomePageTesting.clickCoursesTest</td></tr>
 <tr><td>allPageTestIng.HomePageTesting.clickLoginTest</td></tr>
 <tr><td>allPageTestIng.HomePageTesting.clickMentoresTest</td></tr>
