--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,94 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> id: login-link]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='emails' and @class='form-control form-control-lg']]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //*[@id='password' and @class='form-control form-control-lg']]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Proxy element for: DefaultElementLocator 'By.xpath: //*[@id='login' and@class='btn btn-lg px-5']'<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 3000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //span[text()='Automation']]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Sleeping ... zZz 3000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //a[text()='Enroll Now']]<--------> has been clicked<br></td></tr>
+<tr><td>Total Windows Opened: 2<br></td></tr>
+<tr><td> The Window moved to --> 0D4D04BA3F75A4344FC190383AB19327<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='f_name']]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Shuvo <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='f_name']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>M <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='m_name']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Mirza <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='l_name' and @class='form-control']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>a Student is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>a Staff is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Employed is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Unemployed is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Other is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Total Element: 5 is present in the dropdown<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>a Student has been selected from the dropdown of ---> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@name='i_am']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Python is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Django is present in the dropdpwn<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Total Element: 2 is present in the dropdown<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Python has been selected from the dropdown of ---> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //*[@name='course_wish_to_enroll' and @class='form-control']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>9293306564 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='phone']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>MirzaShuvo79@gmail.com <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_email' and @name='email']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Muktar2024$ <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_password']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Male has been selected from the dropdown of ---> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@id='id_gender']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Screenshot cannot be captured<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>1989 has been selected from the dropdown of ---> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@name='birth_year']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>December has been selected from the dropdown of ---> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@name='birth_month']]<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>16 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@name='birth_date']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>2268 Seward Ave <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='home_address_line_1']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Apt 3 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='home_address_line_2']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Bronx <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_city']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>New York <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@id='id_state']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>10473 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='zip_code']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Citizen <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@name='immigration_status']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>24th Jan 2013 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@name='arrival_date']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>9293306564 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_emergency_contact']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Friends <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_know_us']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Graduate <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@id='id_highest_education']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Bangladesh <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@id='id_country_of_origin']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>English <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //select[@id='id_primary_language']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>Shuvo m Mirza <-----> has been put into <-----> [[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='id_sign_by_name']] and then clicked by Enter Key<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (4c95eb742a135053d00f9bd0c7105754)] -> xpath: //input[@id='is_agree']]<--------> has been clicked<br></td></tr>
+<tr><td>Sleeping ... zZz 2000<br></td></tr>
+</table>
