--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>24/11/23 19:32:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasicClass.setup()[pri:0, instance:allPageTestIng.HomePageTesting@5ace1ed4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@547201549</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/11/23 19:32:49</td>   <td>5110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTesting.clickLogoTest()[pri:0, instance:allPageTestIng.HomePageTesting@5ace1ed4]">clickLogoTest</td> 
-  <td>main@547201549</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>24/11/23 19:32:51</td>   <td>6396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasicClass.tearUp()[pri:0, instance:allPageTestIng.HomePageTesting@5ace1ed4]">&lt;&lt;tearUp</td> 
-<td>&nbsp;</td>  <td>main@547201549</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/11/30 00:26:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasicClass.setup()[pri:0, instance:allPageTestIng.HomePageTesting@793be5ca]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="7e949d">  <td>24/11/30 00:26:23</td>   <td>4848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTesting.clickAutomationEnrollNowtest()[pri:0, instance:allPageTestIng.HomePageTesting@793be5ca]">clickAutomationEnrollNowtest</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>24/11/30 00:28:35</td>   <td>136898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasicClass.tearUp()[pri:0, instance:allPageTestIng.HomePageTesting@793be5ca]">&lt;&lt;tearUp</td> 
+<td>&nbsp;</td>  <td>main@739973450</td>   <td></td> </tr>
 </table>
